# mtc_issue_contents

./: README.md  launch_ursim.sh  mtc_logs.txt  ur_robot_driver_logs.txt
demo/: CMakeLists.txt  package.xml
demo/config/: mtc.rviz  ur5e_config.yaml
demo/include/mercurio_moveit_task_constructor/: pick_place_service_node.h  pick_place_task.h
demo/launch/: mtc.launch.py
demo/src/: pick_place_demo.cpp  pick_place_demo_parameters.yaml  pick_place_service_node.cpp  pick_place_task.cpp
msgs/: CMakeLists.txt
msgs/srv/: PickPlace.srv
ur_robotiq_ur_robot_driver_config/: CMakeLists.txt  package.xml
ur_robotiq_ur_robot_driver_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  pilz_planning_pipeline_config.yaml  ros2_controllers.yaml
ur_robotiq_ur_robot_driver_config/config/ur5e/: joint_limits.yaml
ur_robotiq_ur_robot_driver_config/srdf/: ur.srdf.xacro  ur5e_robotiq.srdf.xacro
ur_robotiq_ur_robot_driver_config/urdf/: initial_positions.yaml  robotiq_2f_85_urdf.xacro  robotiq_gripper.ros2_control.xacro  ur5e_robotiq.ros2_control.xacro  ur5e_robotiq.srdf  ur5e_robotiq.urdf.xacro  ur5e_robotiq_2f_85_urdf.xacro  ur5e_urdf.xacro
