<?xml version="1.0"?>
<package format="3">
  <name>ur_robotiq_ur_robot_driver_config</name>
  <version>0.0.1</version>
  <description>test</description>

  <maintainer email="your_email@example.com">yaroslav</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ur_robot_driver</depend>
  <depend>robotiq</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

